# Flux-Compressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-binaries.yml  release-crates.yml  release-maven.yml  release-please.yml  release-pypi.yml
crates/fluxcapacitor/: Cargo.toml  README.md
crates/fluxcapacitor/benches/: file_formats.rs
crates/fluxcapacitor/src/: bench.rs  commands.rs  compare_bench.rs  dtype_bench.rs  formats.rs  inspector.rs  lib.rs  main.rs  mixed_bench.rs  optimizer.rs  string_bench.rs
crates/fluxcapacitor/tests/: formats_round_trip.rs
crates/jni-bridge/: Cargo.toml  README.md
crates/jni-bridge/src/: ipc_bridge.rs  lib.rs  table_registry.rs  u128_bridge.rs
crates/loom/: Cargo.toml  README.md
crates/loom/benches/: bit_slab.rs  fluxtable.rs  predicate_eval.rs
crates/loom/src/: atlas.rs  bit_io.rs  dtype.rs  dtype_router.rs  error.rs  lib.rs  loom_classifier.rs  null_aware.rs  null_bitmap.rs  outlier_map.rs  segmenter.rs  string_zero_alloc.rs  traits.rs
crates/loom/src/compressors/: alp_compressor.rs  bit_slab_compressor.rs  delta_compressor.rs  dict_compressor.rs  flux_writer.rs  lz4_compressor.rs  mod.rs  rle_compressor.rs  string_compressor.rs
crates/loom/src/decompressors/: block_reader.rs  flux_reader.rs  mod.rs
crates/loom/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
crates/loom/src/txn/: log_entry.rs  mod.rs  mutation.rs  optimizer.rs  partition.rs  projection.rs  schema.rs  snapshot.rs  table.rs  wal.rs
crates/python/: Cargo.toml  README.md
crates/python/src/: lib.rs
docs/: databricks.md  homebrew.md  index.md  installation.md  release-process.md  roadmap-f128.md  roadmap-mutations.md  roadmap-performance.md  roadmap-schema-evolution.md  roadmap-spark-connector.md  roadmap-wal.md
docs/api/: python.md
docs/format/: flux_format.md  fluxtable_format.md
docs/guides/: pandas.md  polars.md  spark.md
examples/: integration_demo.rs  polars_example.py  spark_example.py
java/io/fluxcompress/: FluxNative.java
java/io/fluxcompress/spark/: FluxBatchWrite.java  FluxCatalog.java  FluxDataWriter.java  FluxDataWriterFactory.java  FluxTable.java  FluxTableProvider.java  FluxWrite.java  FluxWriteBuilder.java  FluxWriteMode.java  FluxWriterCommitMessage.java  README.md
java/io/fluxcompress/spark/test/: FluxConnectorTest.java
python/fluxcompress/: __init__.py  _fluxcompress.pyi  _polars.py  _table_writer.py  pandas.py  py.typed  spark.py
python/tests/: bench_scaling.py  conftest.py  spark_uc_smoke_test.py  test_benchmarks.py  test_core.py  test_pandas.py  test_table_writer.py  test_vs_delta.py  test_vs_parquet.py
scripts/: bump-version.sh
spark-connector/: README.md  build.sbt
spark-connector/project/: plugins.sbt
spark-connector/src/main/java/com/datamariners/fluxcompress/: FluxNative.java
spark-connector/src/main/scala/com/datamariners/fluxcompress/: FluxNativeLoader.scala
spark-connector/src/main/scala/com/datamariners/fluxcompress/spark/: FluxBridge.scala  FluxDataSource.scala  FluxScan.scala  FluxSchemaConverter.scala  FluxWrite.scala
spark-connector/src/main/scala/io/fluxcompress/spark/: FluxBridge.scala  FluxDataSource.scala  FluxScan.scala  FluxSchemaConverter.scala  FluxWrite.scala
spark-connector/src/main/scala/org/apache/spark/sql/fluxcompress/: SparkArrowBridge.scala
spark-connector/src/test/scala/com/datamariners/fluxcompress/spark/: FluxDataSourceSpec.scala
spark-connector/src/test/scala/io/fluxcompress/spark/: FluxDataSourceSpec.scala
