[workspace]
members = [
    "crates/loom",
    "crates/fluxcapacitor",
    "crates/jni-bridge",
    "crates/python",
]
resolver = "2"

[workspace.package]
version     = "0.5.4"
edition     = "2024"
license     = "Apache-2.0"
authors     = ["Connor Adams"]
repository  = "https://github.com/connoradams-mariner/Flux-Compressor"

[workspace.dependencies]
# Pinned once here so only `[workspace.package] version` needs to
# change on each release; dependent crates inherit via
# `loom.workspace = true` (with `package = "flux-loom"` so the crate
# name on crates.io is `flux-loom` but the Rust identifier stays
# `loom`).
loom        = { version = "0.5.4", path = "crates/loom", package = "flux-loom" }

# Arrow / columnar interop
arrow       = { version = "52", features = ["prettyprint"] }
arrow-array = "52"
arrow-schema = "52"
arrow-buffer = "52"

# Serialisation
byteorder   = "1"
zerocopy    = { version = "0.7", features = ["derive"] }

# Numeric traits (safe u128 handling)
num-traits  = "0.2"

# Compression
lz4_flex    = "0.11"
zstd        = "0.13"
# FSST: per-column static symbol table for string compression.
fsst        = { package = "fsst-rs", version = "0.5" }

# Parallelism
rayon       = "1.10"

# Integrity
crc32fast   = "1"

# Memory-mapped I/O
memmap2     = "0.9"

# Serialisation (transaction log)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# PyO3 (Python bindings)
pyo3        = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# CLI
clap        = { version = "4", features = ["derive"] }
polars      = { version = "0.40", features = ["lazy", "parquet", "ipc"] }
parquet     = { version = "52", features = ["snap", "zstd", "lz4"] }
orc-rust    = "0.4"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Logging
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion   = { version = "0.5", features = ["html_reports"] }
