[workspace]
members = [
    "crates/loom",
    "crates/fluxcapacitor",
    "crates/jni-bridge",
    "crates/python",
]
resolver = "2"

[workspace.package]
version     = "0.6.3"
edition     = "2024"
license     = "Apache-2.0"
authors     = ["Connor Adams"]
repository  = "https://github.com/connoradams-mariner/Flux-Compressor"

[workspace.dependencies]
# Pinned once here so only `[workspace.package] version` needs to
# change on each release; dependent crates inherit via
# `loom.workspace = true` (with `package = "flux-loom"` so the crate
# name on crates.io is `flux-loom` but the Rust identifier stays
# `loom`).
loom        = { version = "0.6.3", path = "crates/loom", package = "flux-loom" }

# Arrow / columnar interop
arrow       = { version = "52", features = ["prettyprint"] }
arrow-array = "52"
arrow-schema = "52"
arrow-buffer = "52"

# Serialisation
byteorder   = "1"
zerocopy    = { version = "0.7", features = ["derive"] }

# Numeric traits (safe u128 handling)
num-traits  = "0.2"

# Compression
lz4_flex    = "0.11"
zstd        = "0.13"
# FSST: per-column static symbol table for string compression.
fsst        = { package = "fsst-rs", version = "0.5" }

# Parallelism
rayon       = "1.10"

# Integrity
crc32fast   = "1"

# Memory-mapped I/O
memmap2     = "0.9"

# Serialisation (transaction log)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# PyO3 (Python bindings)
pyo3        = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# CLI
clap        = { version = "4", features = ["derive"] }
polars      = { version = "0.40", features = ["lazy", "parquet", "ipc"] }
parquet     = { version = "52", features = ["snap", "zstd", "lz4"] }
orc-rust    = "0.4"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Logging
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion   = { version = "0.5", features = ["html_reports"] }

# ---------------------------------------------------------------------------
# cargo-dist: prebuilt binary releases + Homebrew tap.
#
# Triggered on the same `vX.Y.Z` tags release-please cuts.  cargo-dist
# only packages members that produce a `[[bin]]` target, so out of this
# workspace only `fluxcapacitor` ships — `flux-loom`, `flux-jni-bridge`
# and `fluxcompress-python` are libraries / cdylibs and are auto-skipped.
# We deliberately do NOT add `[package.metadata.dist]` blocks to the
# per-crate manifests because release-please's cargo-workspace plugin
# mis-parses them when they appear after `[lib]` in crates that use
# `version.workspace = true`, and breaks the release-PR open step.
#
# To regenerate `release-binaries.yml` after editing this block, run:
#     cargo dist init --yes
#
# See `docs/homebrew.md` for the one-time tap-repo + secret setup.
# ---------------------------------------------------------------------------
[workspace.metadata.dist]
# Pin cargo-dist so CI reproducibility doesn't drift.  Bump in lockstep
# with `cargo dist init` when upgrading.
cargo-dist-version = "0.27.0"
# CI backends to support.
ci = "github"
# Installers to generate.  `shell` produces the curl|sh installer that
# Linux / macOS users can pipe; `homebrew` ships the formula to the tap.
installers = ["shell", "homebrew"]
# The GitHub repo to push Homebrew formulas to.  This MUST exist before
# the first tagged release — see docs/homebrew.md.
tap = "connoradams-mariner/homebrew-tap"
# Publish jobs to run in CI on tagged releases.
publish-jobs = ["homebrew"]
# Target platforms to build for.
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
# Run plan-only on PRs so contributors get fast feedback without the
# full build matrix executing on every commit.
pr-run-mode = "plan"
# Don't bundle the `axoupdater` self-update binary — fluxcapacitor is
# small and the existing release-please pipeline handles version bumps.
install-updater = false
# Skip prerelease tags (release-please never cuts these, but be defensive).
publish-prereleases = false
# Allow `release-binaries.yml` to diverge from cargo-dist's canonical
# template.  Our workflow is hand-customised to (1) match the existing
# `v*.*.*` tag trigger shared with release-crates / release-pypi /
# release-maven and (2) push the formula to a tap repo via a
# fine-grained PAT instead of cargo-dist's default GitHub App flow.
# Without this, `cargo dist plan` errors out on every PR with a diff
# of what it would have generated.
allow-dirty = ["ci"]
# Build only the packages that produce shipped artifacts (i.e.
# `fluxcapacitor`) instead of the whole workspace.  Without this,
# cargo-dist runs `cargo build --workspace --profile dist` and pulls
# in `fluxcompress-python` (the PyO3 cdylib), which fails to link on
# cross-target macOS builds because the Python framework isn't
# available for the cross architecture.  fluxcompress-python ships as
# wheels via `release-pypi.yml`; it does not belong in the binary
# release pipeline.
precise-builds = true

# cargo-dist's release profile.  cargo-dist invokes
# `cargo build --profile dist`, which Cargo only knows about if we
# define it here.  Inheriting from `release` keeps existing release
# semantics; `lto = "thin"` matches what `cargo dist init` would have
# emitted by default and gives a 5–10 % size win on the published
# binary at modest extra link time.
[profile.dist]
inherits = "release"
lto = "thin"
