[package]
name        = "fluxcapacitor"
description = "FluxCompress CLI – two-pass cold storage optimizer and file manager"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "fluxcapacitor"
path = "src/main.rs"

[dependencies]
# Alias `flux-loom` back to the short `loom` name so the CLI's
# `use loom::…` imports stay identical.
loom         = { path = "../loom", package = "flux-loom", version = "0.5.0" }
clap         = { workspace = true }
polars       = { workspace = true }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
orc-rust     = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
byteorder    = { workspace = true }
serde_json   = { workspace = true }
rayon        = "1.10"
walkdir      = "2"
indicatif    = "0.17"
tempfile     = "3"
