[package]
name        = "fluxcapacitor"
description = "FluxCompress CLI – two-pass cold storage optimizer and file manager"
readme      = "README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "fluxcapacitor"
path = "src/main.rs"

# cargo-dist: this is the only workspace member that ships as a
# prebuilt CLI binary (Homebrew formula + curl|sh installer).
[package.metadata.dist]
dist = true

[dependencies]
# Alias `flux-loom` back to the short `loom` name so the CLI's
# `use loom::…` imports stay identical. Version pin is at the
# workspace level.
loom         = { workspace = true }
clap         = { workspace = true }
polars       = { workspace = true }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
orc-rust     = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
byteorder    = { workspace = true }
serde_json   = { workspace = true }
rayon        = "1.10"
walkdir      = "2"
indicatif    = "0.17"
tempfile     = "3"
