[package]
name        = "fluxcapacitor"
description = "FluxCompress CLI – two-pass cold storage optimizer and file manager"
readme      = "README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
name = "fluxcapacitor"
path = "src/lib.rs"

[[bin]]
name = "fluxcapacitor"
path = "src/main.rs"

[dependencies]
# Alias `flux-loom` back to the short `loom` name so the CLI's
# `use loom::…` imports stay identical. Version pin is at the
# workspace level.
loom         = { workspace = true }
clap         = { workspace = true }
polars       = { workspace = true }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
parquet      = { workspace = true }
orc-rust     = { workspace = true }
calamine     = { workspace = true }
rust_xlsxwriter = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
byteorder    = { workspace = true }
serde_json   = { workspace = true }
tempfile     = "3"
rayon        = "1.10"
walkdir      = "2"
indicatif    = "0.17"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "file_formats"
harness = false
