[package]
name        = "flux-jni-bridge"
description = "JNI bridge exposing FluxCompress to the Spark/JVM ecosystem"
readme      = "README.md"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
name       = "flux_jni"
# cdylib → native shared library (.so / .dylib / .dll) loaded by the JVM.
crate-type = ["cdylib", "rlib"]

# cargo-dist: the JNI bridge ships inside the Maven JAR, not as a
# standalone CLI binary.  Opt out of cargo-dist explicitly.
[package.metadata.dist]
dist = false

[dependencies]
# Pull `flux-loom` from the workspace; alias it as `loom` locally so
# `use loom::…` inside this crate stays unchanged. Version pin lives
# in the workspace's `[workspace.dependencies] flux-loom = ...` so
# bumping a release only touches the workspace `Cargo.toml`.
loom         = { workspace = true }
jni          = { version = "0.21", features = ["invocation"] }
arrow        = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
byteorder    = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
criterion.workspace = true
tempfile = "3"
