[package]
name        = "loom"
description = "FluxCompress core compression engine – adaptive columnar storage"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
name = "loom"
crate-type = ["rlib"]

[dependencies]
arrow.workspace       = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-buffer.workspace = true
byteorder.workspace   = true
zerocopy.workspace    = true
num-traits.workspace  = true
lz4_flex.workspace    = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace     = true

[dev-dependencies]
criterion.workspace   = true

[[bench]]
name    = "bit_slab"
harness = false

[[example]]
name = "integration_demo"

[features]
default  = ["simd-avx2"]
simd-avx2 = []   # enables AVX2 SIMD paths (x86_64)
simd-neon = []   # enables NEON SIMD paths (aarch64)
