[package]
# The crates.io name is `flux-loom` because `loom` is already owned by
# tokio-rs (concurrency permutation testing). The `[lib] name` below
# stays `loom` so every `use loom::…` inside the workspace keeps
# working without a rename cascade, and downstream dependents do the
# rename at the dependency line (`loom = { package = "flux-loom" }`).
name        = "flux-loom"
description = "FluxCompress core compression engine – adaptive columnar storage"
readme      = "README.md"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[lib]
name = "loom"
crate-type = ["rlib"]

# cargo-dist: this is a library crate, never ship it as a standalone
# binary release artifact.  Belt-and-suspenders — cargo-dist already
# auto-skips crates without a `[[bin]]` target.
[package.metadata.dist]
dist = false

[dependencies]
arrow.workspace       = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-buffer.workspace = true
byteorder.workspace   = true
zerocopy.workspace    = true
num-traits.workspace  = true
lz4_flex.workspace    = true
zstd.workspace        = true
fsst.workspace        = true
crc32fast.workspace   = true
rayon.workspace       = true
memmap2.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
anyhow.workspace      = true
tracing.workspace     = true
brotli                = { version = "3", default-features = false, features = ["std"] }

[dev-dependencies]
criterion.workspace   = true
tempfile              = "3"

[[bench]]
name    = "bit_slab"
harness = false

[[bench]]
name    = "fluxtable"
harness = false

[[bench]]
name    = "predicate_eval"
harness = false

[[example]]
name = "integration_demo"
path = "../../examples/integration_demo.rs"

[features]
default  = ["simd-avx2"]
simd-avx2 = []   # enables AVX2 SIMD paths (x86_64)
simd-neon = []   # enables NEON SIMD paths (aarch64)
